--- a/src/components/navbar/NavBar.style.css
+++ b/src/components/navbar/NavBar.style.css
@@ -13,7 +13,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background: #333;
+    background: #2f47c6;
     color: #fff;
     padding: 0 20px;
 }
@@ -21,6 +21,11 @@ nav {
 .logo {
     font-size: 24px;
     font-weight: bold;
+}
+
+.logo a {
+    color: #fff;
+    text-decoration: none;
 }
 
 .nav-links {
