--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,87 +1,101 @@
+/* General Styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    background: #2f47c6;
-    color: #fff;
-    padding: 0 20px;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  background: #2f47c6;
+  color: #fff;
+  padding: 0 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  transition: top 0.3s;
+  z-index: 1000;
+}
+
+.navbar.show {
+  top: 0;
+}
+
+.navbar.hide {
+  top: -60px; /* Adjust this value to be greater than your navbar's height */
 }
 
 .logo {
-    font-size: 24px;
-    font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .logo a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .nav-links {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .nav-links li {
-    padding: 0 20px;
+  padding: 0 20px;
 }
 
 .nav-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 .burger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 21px;
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 21px;
 }
 
 .burger div {
-    width: 25px;
-    height: 3px;
-    background: #fff;
-    border-radius: 5px;
+  width: 25px;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
 }
 
 @media (max-width: 768px) {
-    .nav-links {
-        display: none;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        height: 100vh;
-        width: 100%;
-        background: #333;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        transition: transform 0.5s ease-in;
-    }
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    background: #333;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transition: transform 0.5s ease-in;
+  }
 
-    .nav-active {
-        display: flex;
-    }
+  .nav-active {
+    display: flex;
+  }
 
-    .nav-links li {
-        margin: 20px 0;
-    }
+  .nav-links li {
+    margin: 20px 0;
+  }
 
-    .burger {
-        display: flex;
-    }
+  .burger {
+    display: flex;
+  }
 }
