--- a/src/containers/BlogPost/style.css
+++ b/src/containers/BlogPost/style.css
@@ -1,11 +1,11 @@
-.blog-post {
-  padding: 20px;
+#blog-post {
+  padding: 80px;
 }
 
-.blog-post h1 {
+#blog-post h1 {
   margin-top: 0;
 }
 
-.blog-post p {
+#blog-post p {
   margin: 5px 0;
 }
